fix sidebar z-index bug

--- a/assets/manage-meal-dash.css
+++ b/assets/manage-meal-dash.css
@@ -96,6 +96,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
     height: 100vh;
     background-color: rgba(0,0,0,0.4);
     display: none;
